--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a class="nav-link" href="sortingpage.html">Algorithm</a>
-              <a class="nav-link" href="credits.html">Credits</a>
+              <a class="nav-link" href="html files/sortingpage.html">Algorithm</a>
+              <a class="nav-link" href="html files/credits.html">Credits</a>
             </div>
           </div>
         </div>
