--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
         </div>
       </nav>
     <div class="container-fluid" style="text-align: center; padding-top: 4cm;">
-        <h1 class="display-5" >Ammar & Muaz Sorting Visualizer</h1>
+        <h1 class="display-5" >Ammar Sorting Visualizer</h1>
         <p class="lead">The web application visualizes different sorting algortihms</p>
         <p>
             <small>
                 The application can be used by all patrons interested to visualize and understand how different sorting algortihm works.
             </small>
         </p>
-        <button type="button" class="btn btn-outline-dark btn-lg" onclick="location.href='sortingpage.html'">Click here to go to the algorithms page</button>
+        <button type="button" class="btn btn-outline-dark btn-lg" onclick="location.href='html files/sortingpage.html'">Click here to go to the algorithms page</button>
     </div>
     
     
