--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 The application can be used by all patrons interested to visualize and understand how different sorting algortihm works.
             </small>
         </p>
-        <button type="button" class="btn btn-outline-dark btn-lg" onclick="location.href='html files/sortingpage.html'">Click here to go to the algorithms page</button>
+        <button type="button" class="btn btn-outline-dark btn-lg" onclick="location.href='./html files/sortingpage.html'">Click here to go to the algorithms page</button>
     </div>
     
     
