--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a class="nav-link" href="html files/sortingpage.html">Algorithm</a>
-              <a class="nav-link" href="html files/credits.html">Credits</a>
+              <a class="nav-link active" aria-current="page" href="https://siddiki002.github.io/Sorting-Algorithm-Visualizer/">Home</a>
+              <a class="nav-link" href="https://siddiki002.github.io/Sorting-Algorithm-Visualizer/html%20files/sortingpage.html">Visualise Algorithm</a>
+              <a class="nav-link" href="https://siddiki002.github.io/Sorting-Algorithm-Visualizer/html%20files/credits.html">Credits</a>
             </div>
           </div>
         </div>
