credits.html done

--- a/html files/sortingpage.html
+++ b/html files/sortingpage.html
@@ -13,20 +13,19 @@
     <!-- <h1>Hello, world!</h1> -->
     <nav class="navbar" style="background-color: #e3f2fd;">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Sorting Visualizer</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                    <a class="nav-link" href="sortingpage.html">Algorithm</a>
-                    <a class="nav-link" href="credits.html">Credits</a>
-                </div>
+          <a class="navbar-brand" href="#">Sorting Visualizer</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href="https://siddiki002.github.io/Sorting-Algorithm-Visualizer/">Home</a>
+              <a class="nav-link" href="https://siddiki002.github.io/Sorting-Algorithm-Visualizer/html%20files/sortingpage.html">Visualise Algorithm</a>
+              <a class="nav-link" href="https://siddiki002.github.io/Sorting-Algorithm-Visualizer/html%20files/credits.html">Credits</a>
             </div>
+          </div>
         </div>
-    </nav>
+      </nav>
     <div class="container-fluid" style="padding-left: 4cm; padding-top: 2cm;">
         <div class="row">
             <div class="col-sm-6">
